<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_margin="20dp" >

            <TextView
                android:id="@+id/boatLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Boat"
                android:layout_marginRight="20dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/custSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:drawSelectorOnTop="true" />

            <Button
                android:id="@+id/addCustBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Add" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_margin="20dp" >

            <TextView
                android:id="@+id/fishTypeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FishType"
                android:layout_marginRight="20dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/fishTypeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true" />
        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp" >

            <TextView
                android:id="@+id/pricePerPoundLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PricePerPound"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            
            <EditText
                android:id="@+id/pricePerPoundInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" >
                
            </EditText>
        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp" >

            <TextView
                android:id="@+id/Weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Weight"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            
            <EditText
                android:id="@+id/weightInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" >
                
            </EditText>
            
            <TextView
                android:id="@+id/lbs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbs"
                android:layout_marginRight="20dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp" >

            <TextView
                android:id="@+id/output"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dip"
                android:paddingTop="20dip" />
        </TableRow>
        
    </TableLayout>
    
    <TextView
                android:id="@+id/output3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/Fragment3"
                android:paddingLeft="20dip"
                android:paddingTop="20dip" 
                android:gravity="right"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

</LinearLayout>